syntax = "proto3";
option go_package = ".;pb";

package clickCountApp;

service ClickCountApp {
    rpc GetClicks (GetClicksRequest) returns (GetClicksResponse) {}
    rpc SetClicks (SetClicksRequest) returns (SetClicksResponse) {}
}


message ClickCounts {
    int64 item = 1;
    int64 addToCart = 2;
    int64 buy = 3;
}

message GetClicksRequest {}

message GetClicksResponse {
    ClickCounts clickCounts = 1;
}

message SetClicksRequest {
    ClickCounts clickCounts = 1;
}

message SetClicksResponse {}
